# Atlas-Hemodinamica

./: .gitignore  README.md
etl/: Dockerfile  cli.py  docker-compose.yml  normalize_import.py  pyproject.toml  requirements.txt
etl/adapters/: base.py  cnes_catalog.py  cnes_equipment.py  cnes_facilities.py  cnes_links.py  cnes_professionals.py  cnes_services.py  institutional.py  manual_spreadsheet.py  opendatasus.py
etl/atlas_etl/: __init__.py  classifiers.py  downloaders.py  matchers.py  models.py  normalizers.py  parsers.py  pipeline.py  services.py  utils.py
etl/atlas_etl/discovery/: __init__.py  file_discovery.py  (+1 more)
etl/classifiers/: confidence.py
etl/config/: cbo_rules.yaml  hemodynamics_rules.yaml  sources.yaml
etl/discovery/: __init__.py
etl/downloaders/: __init__.py  http_downloader.py  resumable_downloader.py
etl/jobs/: discover_cnes_files.py  generate_hemodynamics_candidates.py  ingest_cnes_equipment.py  match_doctors_facilities.py  process_queued_jobs.py  refresh_existing_records.py
etl/loaders/: candidate_loader.py  normalized_loader.py  review_queue_loader.py
etl/matchers/: __init__.py
etl/models/: __init__.py  normalized_contact.py  normalized_doctor.py  normalized_evidence.py  normalized_facility.py  normalized_link.py  normalized_registration.py
etl/normalizers/: __init__.py
etl/parsers/: __init__.py  csv_parser.py  dbc_parser.py  dbf_parser.py  fixed_width_parser.py  zip_parser.py
etl/services/: __init__.py  audit_service.py  storage_service.py  supabase_service.py
etl/tests/: test_ingestion.py  test_normalize_import.py
(+157 files in other folders)
