[project]
name = "atlas-etl"
version = "0.2.0"
description = "Backend de ingestão automática — Atlas da Hemodinâmica"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",
  "PyYAML>=6.0.1",
  "supabase>=2.4.0",
  "dbfread>=2.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
dbc = ["pyreaddbc>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
